--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+setuptools
 Django
 djangorestframework
 django-cors-headers
@@ -8,4 +9,5 @@ django-environ
 python-dotenv
 selenium
 pgvector
-llama_index
+llama_index>=0.9.0,<0.10.0
+
