--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
 setuptools
-Django
-djangorestframework
-django-cors-headers
-psycopg2-binary
-gunicorn
-whitenoise
-django-environ
-python-dotenv
-selenium
+Django==5.1.2
+djangorestframework==3.15.2
+django-cors-headers==4.5.0
+psycopg2-binary==2.9.9
+gunicorn==23.0.0
+django-environ==0.11.2
+python-dotenv==1.0.1
+selenium==4.25.0
 pgvector
-llama_index>=0.9.0,<0.10.0
-
+torch
+numpy
+transformers
+llama-index-core>=0.11.13.post1
+llama-index-embeddings-huggingface
+llama-index-llms-llama-cpp
+llama-index-readers-database
+llama-index-vector-stores-postgres
+vllm
+tqdm
+openai
