Enhance semantic chunking command with progress tracking and error handling

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,5 @@ llama-index-embeddings-huggingface
 llama-index-llms-llama-cpp
 llama-index-readers-database
 llama-index-vector-stores-postgres
+langchain
 vllm
