--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,11 @@ numpy
 transformers
 llama-index-core>=0.11.13.post1
 llama-index-embeddings-huggingface
-llama-index-llms-llama-cpp
 llama-index-readers-database
 llama-index-vector-stores-postgres
 langchain
 vllm
+PyJWT
+python-dotenv
+django-cors-headers
+djangorestframework-simplejwt
