Added basic answer txt, also changed gpt4 to gpt3

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,4 +24,5 @@ djangorestframework-simplejwt
 langchain-experimental
 langchain-openai
 spacy
+huspacy
 # https://huggingface.co/huspacy/hu_core_news_lg/resolve/main/hu_core_news_lg-any-py3-none-any.whl
