--- a/requirements.txt
+++ b/requirements.txt
@@ -25,4 +25,5 @@ langchain-experimental
 langchain-openai
 spacy
 huspacy
+cohere
 # https://huggingface.co/huspacy/hu_core_news_lg/resolve/main/hu_core_news_lg-any-py3-none-any.whl
