Add knowledge graph command and update requirements; refine help text in benchmark_rag.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ pgvector
 torch
 numpy
 transformers
+llama-index
 llama-index-core>=0.11.13.post1
 llama-index-embeddings-huggingface
 llama-index-readers-database
