--- a/requirements.txt
+++ b/requirements.txt
@@ -28,4 +28,5 @@ spacy
 huspacy
 cohere
 matplotlib>=3.8.0
+neo4j
 # https://huggingface.co/huspacy/hu_core_news_lg/resolve/main/hu_core_news_lg-any-py3-none-any.whl
