--- a/requirements.txt
+++ b/requirements.txt
@@ -29,4 +29,5 @@ huspacy
 cohere
 matplotlib>=3.8.0
 neo4j
+json-repair
 # https://huggingface.co/huspacy/hu_core_news_lg/resolve/main/hu_core_news_lg-any-py3-none-any.whl
