--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,12 @@ django-environ==0.11.2
 python-dotenv==1.0.1
 selenium==4.25.0
 pgvector
-torch #torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
+torch==2.4.0
+torchvision
 numpy
 transformers
 llama-index
-llama-index-core>=0.11.13.post1
+llama-index-core>=0.11.0
 llama-index-embeddings-huggingface
 llama-index-readers-database
 llama-index-vector-stores-postgres
