Update environment configuration and add README documentation for FactChecker backend

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 ARCHIVUM_USERNAME=''
 ARCHIVUM_PASSWORD=''
 
-# DB parameters
+# DB paraméterek
 DB_HOST=''
 DB_PORT=
 DB_NAME=''
@@ -9,6 +9,16 @@ DB_USERNAME=''
 DB_PASSWORD=''
 DB_URL=''
 
+# DEPRECATED -- Nincsenek használva
 EMBED_DIM=1024
+LLM_MODEL_PATH='/data/szakdoga/Mixtral-8x7B-Instruct-v0.1'
+LLM_CONTEXT_WINDOW=30000
+LLM_MAX_TOKENS=1024
+# DEPRECATED -- Nincsenek használva
 
-OPENAI_API_KEY = 'sk-xxx'
+OPENAI_API_KEY='sk-xxx'
+COHERE_API_KEY='xxx'
+
+NEO4J_URI=''
+NEO4J_USERNAME=''
+NEO4J_PASSWORD=''
