--- a/requirements.txt
+++ b/requirements.txt
@@ -31,4 +31,4 @@ cohere
 matplotlib>=3.8.0
 neo4j
 json-repair
-# https://huggingface.co/huspacy/hu_core_news_lg/resolve/main/hu_core_news_lg-any-py3-none-any.whl
+hu_core_news_lg@https://huggingface.co/huspacy/hu_core_news_lg/resolve/main/hu_core_news_lg-any-py3-none-any.whl
